--- a/CooperationApp/Main.storyboard
+++ b/CooperationApp/Main.storyboard
@@ -222,7 +222,7 @@
         <!--Item-->
         <scene sceneID="qFh-wn-izr">
             <objects>
-                <viewController id="nbL-Mq-rke" customClass="MainTabbarViewController" customModule="CooperationApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainTabbarViewController" id="nbL-Mq-rke" customClass="MainTabbarViewController" customModule="CooperationApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mBh-wh-JFA">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
