--- a/CooperationApp/Main.storyboard
+++ b/CooperationApp/Main.storyboard
@@ -192,7 +192,6 @@
                                 </state>
                                 <connections>
                                     <action selector="nextButtonTapped:" destination="Kg4-n1-feu" eventType="touchUpInside" id="syk-n7-TjO"/>
-                                    <segue destination="QZa-Cn-xOg" kind="show" id="voF-Wy-HbX"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -227,7 +226,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="환영합니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KmS-w6-D7p">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="환영합니다." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KmS-w6-D7p">
                                 <rect key="frame" x="149.5" y="433" width="115" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -291,8 +290,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="2SE-Y1-NfJ" kind="relationship" relationship="viewControllers" id="kIh-fD-Zxl"/>
-                        <segue destination="nbL-Mq-rke" kind="relationship" relationship="viewControllers" id="5OG-bq-PTA"/>
+                        <segue destination="nbL-Mq-rke" kind="relationship" relationship="viewControllers" id="hU2-lj-ZK7"/>
+                        <segue destination="2SE-Y1-NfJ" kind="relationship" relationship="viewControllers" id="ZEW-1G-F59"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1cG-Tq-jHf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
