--- a/CooperationApp/Views/Main.storyboard
+++ b/CooperationApp/Views/Main.storyboard
@@ -407,37 +407,44 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProjectCell" id="p7o-Mb-uWI" customClass="ProjectCell" customModule="CooperationApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="180" height="200"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="180" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="HgU-cl-r3j" customClass="ProjectCell" customModule="CooperationApp" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="180" height="200"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="LYR-s9-Zko">
+                                            <rect key="frame" x="0.0" y="0.0" width="180" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="project Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eVv-ZC-13t">
-                                                    <rect key="frame" x="12" y="12" width="156" height="143.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="user" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6GL-QB-gqe">
+                                                    <rect key="frame" x="12" y="71" width="156" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6GL-QB-gqe">
-                                                    <rect key="frame" x="12" y="167.5" width="156" height="20.5"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KqZ-8Q-gPY">
+                                                    <rect key="frame" x="4" y="10" width="40" height="24.5"/>
+                                                    <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="star" catalog="system" title="" buttonSize="small"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="project Name" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eVv-ZC-13t">
+                                                    <rect key="frame" x="12" y="40" width="156" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="eVv-ZC-13t" secondAttribute="trailing" constant="12" id="06P-yY-olv"/>
+                                                <constraint firstItem="eVv-ZC-13t" firstAttribute="centerX" secondItem="LYR-s9-Zko" secondAttribute="centerX" id="0zQ-77-mp5"/>
                                                 <constraint firstAttribute="trailing" secondItem="6GL-QB-gqe" secondAttribute="trailing" constant="12" id="2IK-h2-Z57"/>
-                                                <constraint firstItem="6GL-QB-gqe" firstAttribute="top" secondItem="eVv-ZC-13t" secondAttribute="bottom" constant="12" id="6uQ-pa-v0W"/>
+                                                <constraint firstItem="eVv-ZC-13t" firstAttribute="leading" secondItem="LYR-s9-Zko" secondAttribute="leading" constant="12" id="6Hq-Eq-hoE"/>
                                                 <constraint firstAttribute="bottom" secondItem="6GL-QB-gqe" secondAttribute="bottom" constant="12" id="7SC-2r-avu"/>
-                                                <constraint firstItem="eVv-ZC-13t" firstAttribute="top" secondItem="HgU-cl-r3j" secondAttribute="top" constant="12" id="eIL-Zg-puN"/>
-                                                <constraint firstItem="6GL-QB-gqe" firstAttribute="leading" secondItem="HgU-cl-r3j" secondAttribute="leading" constant="12" id="gZ5-Ud-U2h"/>
-                                                <constraint firstItem="eVv-ZC-13t" firstAttribute="leading" secondItem="HgU-cl-r3j" secondAttribute="leading" constant="12" id="qb0-18-X8T"/>
-                                                <constraint firstItem="6GL-QB-gqe" firstAttribute="top" secondItem="eVv-ZC-13t" secondAttribute="bottom" constant="12" id="yC9-Ia-eyj"/>
+                                                <constraint firstItem="eVv-ZC-13t" firstAttribute="centerY" secondItem="LYR-s9-Zko" secondAttribute="centerY" id="KgJ-Gu-R4V"/>
+                                                <constraint firstItem="6GL-QB-gqe" firstAttribute="leading" secondItem="LYR-s9-Zko" secondAttribute="leading" constant="12" id="gZ5-Ud-U2h"/>
+                                                <constraint firstAttribute="trailing" secondItem="eVv-ZC-13t" secondAttribute="trailing" constant="12" id="mRh-O6-wow"/>
+                                                <constraint firstItem="KqZ-8Q-gPY" firstAttribute="top" secondItem="LYR-s9-Zko" secondAttribute="top" constant="10" id="pPY-7F-uuH"/>
+                                                <constraint firstItem="KqZ-8Q-gPY" firstAttribute="leading" secondItem="LYR-s9-Zko" secondAttribute="leading" constant="4" id="y3K-Xv-GYQ"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="180" height="200"/>
+                                        <size key="customSize" width="180" height="100"/>
                                         <connections>
                                             <outlet property="projectTitleLabel" destination="eVv-ZC-13t" id="s5N-Ff-zsI"/>
                                             <outlet property="userLabel" destination="6GL-QB-gqe" id="u3m-YZ-UZx"/>
@@ -508,6 +515,7 @@
         <image name="google.png" width="18" height="18"/>
         <image name="logo" width="570" height="252"/>
         <image name="logo_google" width="33.333332061767578" height="33.333332061767578"/>
+        <image name="star" catalog="system" width="128" height="116"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
